# ScAN

./: README.md  pyproject.toml  requirements.txt
examples/: train_config.yaml
src/scaner/: annotate_scan.py  build_scan.py  config_loader.py  helpers.py  joint_roberta.py  loader.py  metrics.py  spacy_manager.py  suicide_dataset.py  trainer.py
src/scaner/scripts/: create_scan_corpus.py  predict.py  train_model.py
