[project]
name = "scaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "medspacy>=1.3.1",
    "pyyaml>=6.0.3",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[project.scripts]
scan-build = "scaner.scripts.create_scan_corpus:main"
scan-train = "scaner.scripts.train_model:main"
scan-predict = "scaner.scripts.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
